--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,44 @@ body{
     /* whatever the width, it will always try fit the element in the box */
     background-size: cover;
     background-position: top;
-    /* for bottom clipping from header image  topLeft, topRight, bottomRight, bottomLeft*/
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%)
+    position: relative;
+    /* xy xy xy xy for bottom clipping from header image  topLeft, topRight, bottomRight, bottomLeft*/
+    clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%)
+    /* can google a bunch of cool clip paths */
+}
+
+.logo-box{
+    position:absolute;
+    top: 30px;
+    left: 30px;
+}
+
+.logo{
+    height: 35px;
+}
+
+.text-box{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.heading-primary{
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.heading-primary-main{
+    display:block;
+    font-size: 60px;
+    font-weight: 700;
+    letter-spacing: 30px;
+}
+
+.heading-primary-sub{
+    display:block;
+    font-size: 20px;
+    font-weight: 300;
+    letter-spacing: 17.5px;
 }
